# krkr2-flutter

./: .clang-format  .dockerignore  .gitignore  Build.md  CMakeLists.txt  CMakePresets.json  DockerFile  DockerFile.android  README.md  README_CN.md  README_EN.md  build-linux.sh  build-windows.bat  build.gradle  build.ps1  gradle.properties  krkr2_plugins.md  linux-reuire.md  settings.gradle  valgrind-out.txt  vcpkg-configuration.json  vcpkg.json
cpp/core/: CMakeLists.txt
cpp/core/base/: 7zArchive.cpp  BinaryStream.cpp  CMakeLists.txt  CharacterSet.cpp  EventIntf.cpp  EventIntf.h  KAGParser.cpp  KAGParser.h  PluginIntf.cpp  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  SystemIntf.cpp  TARArchive.cpp  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  ZIPArchive.cpp  common.h  tar.h
cpp/core/base/impl/: MsgImpl.cpp  StorageImpl.cpp  SysInitImpl.cpp
cpp/core/base/win32/: EventImpl.cpp  FileSelector.cpp  FuncStubs.cpp  NativeEventQueue.cpp  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  ScriptMgnImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SysInitImpl.cpp  SystemImpl.cpp  SystemImpl.h  win32io.h
cpp/core/common/: Defer.h
cpp/core/environ/: Application.cpp  Application.h  CMakeLists.txt  DetectCPU.cpp  DetectCPU.h  DumpSend.cpp  EngineBootstrap.cpp  EngineBootstrap.h  EngineLoop.cpp  EngineLoop.h  Platform.h  XP3ArchiveRepack.cpp  combase.h  typedefine.h  vkdefine.h
cpp/core/environ/ConfigManager/: GlobalConfigManager.cpp  GlobalConfigManager.h  IndividualConfigManager.cpp  IndividualConfigManager.h  LocaleConfigManager.cpp  LocaleConfigManager.h
cpp/core/environ/android/: AndroidUtils.cpp
cpp/core/environ/cocos2d/: AppDelegate.cpp  AppDelegate.h  CCKeyCodeConv.cpp  CustomFileUtils.cpp  CustomFileUtils.h  MainScene.cpp  MainScene.h  YUVSprite.cpp  YUVSprite.h
cpp/core/environ/linux/: Platform.cpp
cpp/core/environ/sdl/: tvpsdl.cpp
cpp/core/environ/stubs/: ui_stubs.cpp
cpp/core/environ/ui/: BaseForm.cpp  BaseForm.h  (+27 more)
cpp/core/extension/: CMakeLists.txt  Extension.cpp
cpp/core/movie/: CMakeLists.txt  krmovie.cpp
cpp/core/msg/: MsgIntf.cpp  MsgIntfInc.h
cpp/core/plugin/: CMakeLists.txt  PluginImpl.cpp  ncbind.cpp  ncbind.hpp
cpp/core/sound/: CDDAIntf.cpp  CDDAIntf.h  CMakeLists.txt  FFWaveDecoder.cpp  FFWaveDecoder.h  MIDIIntf.cpp  MIDIIntf.h  MathAlgorithms.cpp  MathAlgorithms.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  PhaseVocoderFilter.cpp  PhaseVocoderFilter.h  RingBuffer.h  SoundBufferBaseIntf.cpp  SoundBufferBaseIntf.h  VorbisWaveDecoder.cpp  VorbisWaveDecoder.h  WaveFormatConverter.cpp  WaveFormatConverter_SSE.cpp  WaveIntf.cpp  WaveIntf.h  WaveLoopManager.cpp  WaveLoopManager.h  WaveSegmentQueue.cpp  WaveSegmentQueue.h  xmmlib.cpp  xmmlib.h
cpp/core/tjs2/: CMakeLists.txt  tjs.cpp  tjs.h  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCommHead.h  tjsCompileControl.cpp  tjsCompileControl.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.cpp  tjsDate.h  tjsDateParser.cpp  tjsDateParser.h  tjsDateWordMap.cc  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.cpp  tjsError.h  tjsErrorDefs.h  tjsErrorInc.h  tjsError_jp.h  tjsException.cpp  tjsException.h  tjsGlobalStringMap.cpp  tjsGlobalStringMap.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  (+37 more)
cpp/core/utils/: CMakeLists.txt  ClipboardIntf.cpp  ClipboardIntf.h  DebugIntf.cpp  DebugIntf.h  Debugger.h  FilePathUtil.h  KAGParser.cpp  KAGParser.h  MathAlgorithms.h  MathAlgorithms_Default.cpp  MiscUtility.cpp  ObjectList.h  PadIntf.cpp  PadIntf.h  Random.cpp  RealFFT_Default.cpp  StringUtil.h  TickCount.cpp  TimerIntf.cpp  TimerIntf.h  VelocityTracker.cpp  VelocityTracker.h  md5.h
cpp/core/visual/: BitmapIntf.cpp  BitmapIntf.h  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  CMakeLists.txt  CharacterData.cpp  CharacterData.h  ComplexRect.cpp  ComplexRect.h  FontImpl.cpp  FontImpl.h  FontRasterizer.h  FontSystem.cpp  FontSystem.h  FreeType.cpp  FreeType.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  GraphicsLoadThread.cpp  GraphicsLoadThread.h  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  ImageFunction.cpp  ImageFunction.h  LayerBitmapIntf.cpp  LayerBitmapIntf.h  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LayerManager.h  LayerTreeOwner.h  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadAMV.cpp  LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  LoadPNG.cpp  LoadPVRv3.cpp  LoadTLG.cpp  (+27 more)
cpp/plugins/: CMakeLists.txt  InternalPlugins.cpp  LayerExBase.cpp  LayerExBase.h  addFont.cpp  csvParser.cpp  dirlist.cpp  getSample.cpp  getabout.cpp  krkrgles.cpp  krkrlive2d.cpp  layerExBTOA.cpp  layerExBase.hpp  layerExBase_wamsoft.hpp  layerExMovie.cpp  layerExPerspective.cpp  saveStruct.cpp  scriptsEx.cpp  textrender.cpp  tp_stub.h  varfile.cpp  win32_dt.h  windowEx.cpp  wutcwf.cpp  xp3filter.cpp  xp3filter.h
cpp/plugins/DrawDeviceForSteam/: DrawDeviceForSteam.cpp
cpp/plugins/KAGParserEx/: CMakeLists.txt  KAGParser.cpp  KAGParser.h  KAGParserEx.cpp  KAGParserEx.hpp  Main.cpp  tjsHashSearch.h
cpp/plugins/fstat/: CMakeLists.txt  fstatPlugin.cpp  main.cpp
cpp/plugins/json/: jsonPlugin.cpp
cpp/plugins/layerex_draw/: CMakeLists.txt  DrawPath.cpp  LayerExDraw.cpp  LayerExDraw.hpp  Path.cpp  gdip_cxx.h  gdip_cxx_brush.h  gdip_cxx_pen.h  layerExBase.hpp  main.cpp
cpp/plugins/motionplayer/: CMakeLists.txt  Player.h  main.cpp
cpp/plugins/ncbind/: ncbind.hpp
cpp/plugins/psbfile/: CMakeLists.txt  EMoteCTX.h  IResourceMetadata.h  PSB.h  PSBExtension.h  PSBFile.cpp  PSBFile.h  PSBHeader.h  PSBMedia.cpp  PSBMedia.h  PSBValue.cpp  PSBValue.h  main.cpp
cpp/plugins/psdfile/: CMakeLists.txt  main.cpp  psdclass.cpp  psdclass.h  psdclass_loadmem.cpp  psdclass_loadstream.cpp  psdclass_loadstreambase.cpp
cpp/plugins/simplebinder/: simplebinder.hpp
cpp/plugins/steam/: CMakeLists.txt  steamPlugin.cpp
(+389 files in other folders)
